- **08月12日**：   - 新增API以支持获取公众号文章的点赞、阅读数，以及评论信息，具体可查看[公众号](https://www.wechatsdk.com/zh/docs/公众号)相关类目   - 新增API能力：包括[公众号-获取详情链接]()   - 新增API能力：包括[公众号-获取文章详情]()   - 新增API能力：包括[公众号-获取评论信息]()   - 新增API能力：包括[公众号-获取指定评论回复]()   - 本次更新API文档不会新增相关文档，如有这方面需求请联系商务获取   - 发布3.9.10版本的[1.1.3]() - **08月05日**：   - 发布一系列收藏相关功能，具体可以查看新增的[收藏夹](https://www.wechatsdk.com/zh/docs/收藏夹)分类。   - 尝试修复一个Bug，该Bug曾导致：在拉朋友加入群聊后，微信可能闪退。   - 修复了一个Bug，该Bug曾导致：[获取用户朋友圈信息](https://www.wechatsdk.com/zh/docs/朋友圈/获取朋友圈信息.md)接口，当朋友设置了可见范围，状态码返回`207`且无数据。   - [获取作品详情](https://www.wechatsdk.com/zh/docs/视频号/获取作品详情.md)接口优化，现在支持使用`exportId`来获取视频号作品的详细信息。   - 发布3.9.10版本的[1.1.2]() - **07月21日**：   - [cdn上传](https://www.wechatsdk.com/zh/docs/CDN/CDN上传.md)接口优化，如果将fileType设置为3，将会使用未压缩的图片作为`thumbnail`，此改动用于支持发送小程序消息时携带的图片。   - [cdn上传](https://www.wechatsdk.com/zh/docs/CDN/CDN上传.md)接口优化，如果fileType设置为7，将会适用不同的逻辑以提高上传速度。   - [发送文件](https://www.wechatsdk.com/zh/docs/发送消息/发送文件.md)接口优化，根据文件大小适用不同的逻辑，目前的临界点为25M。   - [转发文件](https://www.wechatsdk.com/zh/docs/发送消息/转发文件.md)接口优化，现在提供一个可选参数`fileType`，如果将该字段设置为7，则适用大文件发送逻辑。该字段默认值为5。   - [cdn下载(旧)](https://www.wechatsdk.com/zh/docs/CDN/CDN下载.md)接口优化，如果`fileType`字段为7，将适用不同的逻辑以提高下载速度。注：实测[cdn下载(新)](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口的下载的速度更快。   - 尝试修复一个Bug，该Bug曾导致：调用[cdn下载(新)](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口时无法获取到cdn节点，导致下载失败。   - [发布朋友圈](https://www.wechatsdk.com/zh/docs/朋友圈/发布朋友圈.md)接口优化，现在可以传递一个`protocolVersion`字段，以使用之前的协议版本进行发送或转发，此改动用于解决部分朋友圈在转发后视频不可播放问题。   - 发布3.9.10版本的[1.1.1]() - **07月15日**：   - 修复了一个Bug，该Bug曾导致，某些号调用[添加群成员](https://www.wechatsdk.com/zh/docs/群管理/添加群成员.md)、[删除群成员](https://www.wechatsdk.com/zh/docs/群管理/删除群成员.md)接口时，如果提供了多个好友id，只有第一个会生效问题。   - 修复了一个Bug，该Bug曾导致，[发送视频号消息](https://www.wechatsdk.com/zh/docs/发送消息/发送视频号消息.md)时可能出现崩溃。   - [搜一搜](https://www.wechatsdk.com/zh/docs/公众号/搜一搜.md)接口优化，现在可以传递一个`cookies`字段，该字段可以从前一次调用的返回信息中获取，用于解决`搜索视频号->最新`时设置的Offset无效问题。   - [cdn上传](https://www.wechatsdk.com/zh/docs/CDN/CDN上传.md)接口优化，解决部分视频

--- a/doc/readme/更新日志.md
+++ b/doc/readme/更新日志.md
@@ -1,9 +1,38 @@
 ## 📅 更新日志
 ### 2024年
+- **08月12日**：
+  - 新增API以支持获取公众号文章的点赞、阅读数，以及评论信息，具体可查看[公众号](https://www.wechatsdk.com/zh/docs/公众号)相关类目
+  - 新增API能力：包括[公众号-获取详情链接]()
+  - 新增API能力：包括[公众号-获取文章详情]()
+  - 新增API能力：包括[公众号-获取评论信息]()
+  - 新增API能力：包括[公众号-获取指定评论回复]()
+  - 本次更新API文档不会新增相关文档，如有这方面需求请联系商务获取
+  - 发布3.9.10版本的[1.1.3]()
+- **08月05日**：
+  - 发布一系列收藏相关功能，具体可以查看新增的[收藏夹](https://www.wechatsdk.com/zh/docs/收藏夹)分类。
+  - 尝试修复一个Bug，该Bug曾导致：在拉朋友加入群聊后，微信可能闪退。
+  - 修复了一个Bug，该Bug曾导致：[获取用户朋友圈信息](https://www.wechatsdk.com/zh/docs/朋友圈/获取朋友圈信息.md)接口，当朋友设置了可见范围，状态码返回`207`且无数据。
+  - [获取作品详情](https://www.wechatsdk.com/zh/docs/视频号/获取作品详情.md)接口优化，现在支持使用`exportId`来获取视频号作品的详细信息。
+  - 发布3.9.10版本的[1.1.2]()
+- **07月21日**：
+  - [cdn上传](https://www.wechatsdk.com/zh/docs/CDN/CDN上传.md)接口优化，如果将fileType设置为3，将会使用未压缩的图片作为`thumbnail`，此改动用于支持发送小程序消息时携带的图片。
+  - [cdn上传](https://www.wechatsdk.com/zh/docs/CDN/CDN上传.md)接口优化，如果fileType设置为7，将会适用不同的逻辑以提高上传速度。
+  - [发送文件](https://www.wechatsdk.com/zh/docs/发送消息/发送文件.md)接口优化，根据文件大小适用不同的逻辑，目前的临界点为25M。
+  - [转发文件](https://www.wechatsdk.com/zh/docs/发送消息/转发文件.md)接口优化，现在提供一个可选参数`fileType`，如果将该字段设置为7，则适用大文件发送逻辑。该字段默认值为5。
+  - [cdn下载(旧)](https://www.wechatsdk.com/zh/docs/CDN/CDN下载.md)接口优化，如果`fileType`字段为7，将适用不同的逻辑以提高下载速度。注：实测[cdn下载(新)](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口的下载的速度更快。
+  - 尝试修复一个Bug，该Bug曾导致：调用[cdn下载(新)](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口时无法获取到cdn节点，导致下载失败。
+  - [发布朋友圈](https://www.wechatsdk.com/zh/docs/朋友圈/发布朋友圈.md)接口优化，现在可以传递一个`protocolVersion`字段，以使用之前的协议版本进行发送或转发，此改动用于解决部分朋友圈在转发后视频不可播放问题。
+  - 发布3.9.10版本的[1.1.1]()
+- **07月15日**：
+  - 修复了一个Bug，该Bug曾导致，某些号调用[添加群成员](https://www.wechatsdk.com/zh/docs/群管理/添加群成员.md)、[删除群成员](https://www.wechatsdk.com/zh/docs/群管理/删除群成员.md)接口时，如果提供了多个好友id，只有第一个会生效问题。
+  - 修复了一个Bug，该Bug曾导致，[发送视频号消息](https://www.wechatsdk.com/zh/docs/发送消息/发送视频号消息.md)时可能出现崩溃。
+  - [搜一搜](https://www.wechatsdk.com/zh/docs/公众号/搜一搜.md)接口优化，现在可以传递一个`cookies`字段，该字段可以从前一次调用的返回信息中获取，用于解决`搜索视频号->最新`时设置的Offset无效问题。
+  - [cdn上传](https://www.wechatsdk.com/zh/docs/CDN/CDN上传.md)接口优化，解决部分视频文件无法创建缩略图导致返回的id用于发送消息时不成功。
+  - 发布3.9.10版本的[1.1.0]()
 - **07月01日**：
   - http消息推送底层框架优化，在收到消息后，请返回状态码200提示接收消息成功，如果消息推送失败或状态码异常，则会记录到日志文件。
-  - `msgSvrID`字段推送优化，为不懂得如何处理大数字失真的开发者提供解决方案。
-    - 现在，在所有包含该字段的地方，会提供`szMsgSvrID`字段（如发送各类消息、推送hook的消息）。
+  - `msgSvrID`字段推送优化，为不懂得如何处理大数字失真的开发者提供解决方案。 
+    - 现在，在所有包含该字段的地方，会提供`szMsgSvrID`字段（如发送各类消息、推送hook的消息）。 
     - 为尽量保证字段名统一，推送自己通过微信界面发送的消息时，相关名称已从`msgSvrId`变更为`msgSvrID`，此更改可能需要您调整相关业务代码，请注意。
   - 已对大多数接口所需的uint64类型参数（如[撤回消息](https://www.wechatsdk.com/zh/docs/发送消息/撤回消息.md)中的`msgSvrID`）进行优化，现在同时支持uint64类型和string类型（参数名无需改变）。
   - 发布3.9.10版本的[1.0.9]()
@@ -30,16 +59,16 @@
 - **06月18日**：
   - [CDN下载（新）](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口小幅优化，当无法获取到目标dns时会尝试使用旧版dns，待收集更多信息后继续优化。
   - [搜一搜](https://www.wechatsdk.com/zh/docs/公众号/搜一搜.md)接口现在支持按条件搜索，详情查看目标页面。
-  - [进入直播间](https://www.wechatsdk.com/zh/docs/直播间/进入直播间.md)接口现在需要提供finderUserName参数。
+  - [进入直播间](https://www.wechatsdk.com/zh/docs/直播间/进入直播间.md)新增`finderUserName`可选参数
   - 群聊事件推送优化，现在支持自己进群、退群，或被踢事件的推；现在，群成员进入和退出事件会分开推送，并已设置`subType`参数。
   - 发布3.9.10版本的[1.0.7]()
 - **06月12日**：
   - 新增一个[新的CDN下载](https://www.wechatsdk.com/zh/docs/CDN/CDN下载(新).md)接口，用于支持企业微信用户发送的信息，该接口也可用于下载普通用户发送的信息，该接口已支持异步调用；同时，CDN相关的接口添加了可选的`chatType`参数，0表示私聊消息，1表示群聊消息，默认为0。
   - [视频号作品解密](https://www.wechatsdk.com/zh/docs/视频号/视频号作品解密.md)接口优化，现在`decodeKey`参数支持传递字符串。
   - [获取朋友圈信息](https://www.wechatsdk.com/zh/docs/朋友圈/获取朋友圈信息.md)接口优化，现在`startObjectId`参数支持传递字符串，看后续反馈是否要对其他接口适用该优化。
-  - 尝试修复一个Bug，该Bug曾导致：短时间内重复[发送链接消息](https://www.wechatsdk.com/zh/docs/发送消息/发送链接.md)可能返回相同的消息id并且对方只接收到一条。
+  - 修复一个Bug，该Bug曾导致：短时间内重复[发送链接消息](https://www.wechatsdk.com/zh/docs/发送消息/发送链接.md)可能返回相同的消息id并且对方只接收到一条。
   - 群聊事件推送已回滚（1.0.5优化的逻辑可能丢失退群事件）此功能最近会尝试继续优化。
-  - 编程化启动需关注：添加了一个实验性质的功能，该功能会在调用`start_http_server`时启动，用于增强防检测，请注意，该功能在启用后会导致卸载sdk时引发微信崩溃，所以务必在尝试卸载前调用`stop_http_server`进行清理。
+  - 编程化启动需关注：添加了一个实验性质的功能，该功能会在调用`start_http_server`时启动，用于增强防检测，请注意，该功能在启用后会导致卸载sdk时引发微信崩溃，所以务必在卸载前调用`stop_http_server`进行清理。
   - 编程化启动需关注：如何回调到提供的程序中，可以参考[进程内回调](https://www.wechatsdk.com/zh/docs/处理消息/进程消息处理器.md)中的示例代码。
   - 发布3.9.10版本的[1.0.6]()
 - **06月06日**：
@@ -57,9 +86,11 @@
   - 优化API:[检测链接是否被封禁](https://www.wechatsdk.com/zh/docs/安全/检测链接是否被封禁.md)。
   - 发布3.9.10版本的[1.0.4.f3]()
 - **05月27日**：
-  - 修复了一个Bug，该Bug曾导致：个别电脑消息量大时出现[发送文本](https://www.wechatsdk.com/zh/docs/发送消息/发送文本.md)消息阻塞的情况。
+  - [发送文本](https://www.wechatsdk.com/zh/docs/发送消息/发送文本.md)添加一个可选参数，决定是否要写回数据库，默认为true
   - [下载朋友圈图片](https://www.wechatsdk.com/zh/docs/朋友圈/下载朋友圈图片视频.md)文档整理。
-  - 对于经常碰到的问题的API整理下了文档，关于如何接收消息请参考：[http消息处理器](https://www.wechatsdk.com/zh/docs/处理消息/http处理器.md)下方的代码示例，如果是远程推送则推荐ws协议。
+  - 对于经常碰到的问题的API整理下了文档，关于如何接收消息请参考：[http消息处理器](https://www.wechatsdk.com/zh/docs/处理消息/http处理器.md)
+    下方的代码示例，如果是远程推送则推荐ws协议。
+  - 消息返回字段中原`reversed1` 改为`reserved1`
   - 发布3.9.10版本的[1.0.4.f2]()
 - **05月24日**：
   - 修复了一个Bug，该Bug曾导致：调用[cdn下载](https://www.wechatsdk.com/zh/docs/CDN/CDN下载.md)接口下载图片报错400。
@@ -77,16 +108,17 @@
   - 发布3.9.10版本的[1.0.4]()
 - **05月16日**：
   - 整理API文档目录，新增[安全](https://www.wechatsdk.com/zh/docs/安全)目录
+  - 新增[检测url是否被微信屏蔽](https://www.wechatsdk.com/zh/docs/安全/检测链接是否被封禁.md)接口。
   - 解决已知机型启动微信失败问题
   - 发布3.9.10版本的[1.0.3]()
 - **05月13日**：
   - 登录过程中推送二维码事件（扫描、确认、取消、过期），如有验证码，会在扫描事件中推送。
   - 修复Bug：启用防撤回会导致下载文件不会正常结束并且自己也无法撤回消息。
-  - [设置API访问密钥](https://www.wechatsdk.com/zh/docs/其他功能/设置API访问秘钥.md)修改参数
+  - 设置[API访问密钥](https://www.wechatsdk.com/zh/docs/安全/设置API访问秘钥.md)修改参数
   - 解决登录过程中可能出现的崩溃问题。
   - 支持win11、arm等系统
-  - 新增[发送企业用户名片](https://www.wechatsdk.com/zh/docs/发送消息/发送企业用户名片.md)接口
-  - 发布3.9.10版本的[1.0.2]()
+  - 新增[发送企业用户名片](https://www.wechatsdk.com/zh/docs/发送消息/发送企业用户名片.md)
+  - 发布3.9.10版本的1.0.2
 - **05月07日**：
   - 全面支持3.9.10版本，全量API兼容，公测中
   - 支持win11、arm等系统
@@ -106,7 +138,6 @@
   - 增加[获得热点视频](https://www.wechatsdk.com/zh/docs/视频号/获取热点视频.md)
   - 增加[设置API访问密钥](https://www.wechatsdk.com/zh/docs/其他功能/设置API访问秘钥.md)
   - 增加[转化wxgf文件](https://www.wechatsdk.com/zh/docs/表情包/转换wxgf文件.md)
-  - 增加新的启动方式，不再依赖启动器了
   - 修复bug：登录失败时会导致微信退出
   - 发布新版本[1.1.10]()
 - **04月22日**：
@@ -145,7 +176,7 @@
 - **03月06日**：
   - 更新了使用手册
   - 更新了文档，增加了更多示例：[获取所有好友列表](https://www.wechatsdk.com/zh/docs/通讯录/获取所有好友列表.md)
-  - 新增了API：[获取企业用户信息](https://www.wechatsdk.com/zh/docs/通讯录/获取企业用户信息.md)
+  - 新增了API：[获取企业好友昵称](https://www.wechatsdk.com/zh/docs/通讯录/获取企业用户昵称.md)
   - 新增了API：[获取群列表](https://www.wechatsdk.com/zh/docs/群管理/获取所有群列表.md)
   - 新增了文档：[微信数据库简述](https://www.wechatsdk.com/zh/docs/数据库/微信数据库简述.md)
   - 发布了版本:[wechatAPI_1.1.3]()，优化了防封机制，增加了避免被识别的机制。
@@ -173,7 +204,7 @@
   - 添加了[开启/关闭防撤回](https://www.wechatsdk.com/zh/docs/其他功能/开启关闭防撤回.md)接口。监听到撤回消息时，会将原消息内容一起推送
   - 新增了[文本翻译](https://www.wechatsdk.com/zh/docs/其他功能/文本翻译.md)接口。
 - **1月03日**：
-  - 准备发朋友圈接口xml示例 xml详见：[点击查看](https://github.com/WeChatApis/wechatSDK)
+  - 准备发朋友圈接口xml示例 xml详见：[点击查看](https://github.com/WeChatAPIs/WechatBotCMD)
   - 准备发送小程序xml示例
 
 ### 2023年
