--- a/doc/公众号/搜一搜.md
+++ b/doc/公众号/搜一搜.md
@@ -11,12 +11,13 @@
 
 #### 参数
 
-| 参数名          | 必选 | 类型     | 说明                   |   
-|:-------------|:---|:-------|----------------------|   
-| type         | 是  | int    | 接口编号                 |   
-| keyword      | 是  | string | 搜索关键词                |   
-| offset       | 否  | int    | 指定搜索结果的起始点           |   
-| businessType | 否  | int    | 搜索类型                 |   
+| 参数名          | 必选 | 类型     | 说明                    |   
+|:-------------|:---|:-------|-----------------------|   
+| type         | 是  | int    | 接口编号                  |   
+| keyword      | 是  | string | 搜索关键词                 |   
+| cookies      | 否  | string | cookie，从前一次调用的返回结果中获取 |   
+| offset       | 否  | int    | 指定搜索结果的起始点            |   
+| businessType | 否  | int    | 搜索类型                  |   
 
 - 因参数过多，按条件搜索可以参考调用示例。
 
