--- a/doc/公众号/获取详情链接.md
+++ b/doc/公众号/获取详情链接.md
@@ -1,6 +1,7 @@
 #### 简要描述
 
-- 添加群成员到通讯录/添加群成员为好友。
+- 获取公众号详情链接，然后使用该链接获取点赞数量、在看、评论等信息，此链接在相关接口中复用。
+- 如果您之前有获取相关信息的抓包经历，可以自行提取链接中的key、pass_ticket等信息，然后按照之前的方式获取。
 
 #### 请求URL
 
@@ -12,23 +13,7 @@
 
 #### 参数
 
-| 参数名              | 必选 | 类型     | 说明     |   
-|:-----------------|:---|:-------|--------|   
-| type             | 是  | int    | 接口编号   |   
-| chatroomUserName | 是  | string | 群聊wxid |   
-| userName         | 是  | string | 用户wxid |   
-| message          | 否  | string | 消息     |   
-
-#### 请求示例
-
-```
- {
-  "type": 10090,
-  "userName": "wxid_xxx",
-  "chatroomUserName": "xxx@chatroom",
-  "message": "hello"
- }
-```
+- 该API文档请联系商务获取
 
 #### 返回示例
 
