--- a/doc/发送消息/转发文件.md
+++ b/doc/发送消息/转发文件.md
@@ -2,7 +2,7 @@
 
 #### 简要描述
 
-- 无源发送图片消息。
+- 无源发送文件消息。
 
 #### 请求URL
 
@@ -14,19 +14,20 @@
 
 #### 参数
 
-| 参数名          | 必选 | 类型     | 说明                       |   
-|:-------------|:---|:-------|--------------------------|   
-| type         | 是  | int    | 接口编号                     |   
-| userName     | 是  | string | 接收人wxid                  |   
-| fileName     | 是  | string | 文件显示名称                   |   
-| rawtotalsize | 是  | string | 源文件大小，cdn上传接口会返回该字段      |   
-| rawfilemd5   | 是  | string | 源文件md5，cdn上传接口会返回该字段     |   
-| fileid       | 是  | string | fileid，cdn上传接口会返回该字段     |   
-| rawfilekey   | 是  | string | rawfilekey，cdn上传接口会返回该字段 |   
-| aeskey       | 是  | string | aeskey，cdn上传接口会返回该字段     |   
-| filecrc      | 是  | string | 文件校验值，cdn上传接口会返回该字段      |   
+| 参数名           | 必选 | 类型     | 说明                                                                                  |   
+|:--------------|:---|:-------|-------------------------------------------------------------------------------------|   
+| type          | 是  | int    | 接口编号                                                                                |   
+| userName      | 是  | string | 接收人wxid                                                                             |   
+| fileName      | 是  | string | 文件显示名称                                                                              |   
+| rawtotalsize  | 是  | string | 源文件大小，cdn上传接口会返回该字段                                                                 |   
+| rawfilemd5    | 是  | string | 源文件md5，cdn上传接口会返回该字段                                                                |   
+| fileid        | 是  | string | fileid，cdn上传接口会返回该字段                                                                |   
+| rawfilekey    | 是  | string | rawfilekey，cdn上传接口会返回该字段                                                            |   
+| aeskey        | 是  | string | aeskey，cdn上传接口会返回该字段                                                                |   
+| filecrc       | 是  | string | 文件校验值，cdn上传接口会返回该字段                                                                 |   
 | bAsync        | 否  | bool   | 如果将该参数设置为true，则任务不再阻塞，接口响应内容会通过消息处理器返回，消息推送类型为0<br/>如果提供了asyncUserData参数，会随调用结果一起推送 |   
 | asyncUserData | 否  | str    | xxxx                                                                                |   
+| fileType      | 否  | int    | 文件类型，5：普通文件，7：大文件。默认值：5                                                             |   
 
 #### 请求示例
 
