--- a/doc/收藏夹/获取收藏列表.md
+++ b/doc/收藏夹/获取收藏列表.md
@@ -1,7 +1,7 @@
 
 #### 简要描述
 
-- 添加群管理员。
+- 获取收藏列表。
 
 #### 请求URL
 - ` http://127.0.0.1:8888/api/`
@@ -11,21 +11,17 @@
 
 #### 参数
 
-| 参数名              | 必选 | 类型     | 说明     |   
-|:-----------------|:---|:-------|--------|   
-| type             | 是  | int    | 接口编号   |   
-| userName         | 是  | string | 用户wxid |   
-| chatroomUserName | 是  | string | 群聊wxid |   
+| 参数名    | 必选 | 类型  | 说明    |   
+|:-------|:---|:----|-------|   
+| type   | 是  | int | 接口编号  |   
 
 #### 请求示例
 
 ```
  {
-  "type": 49,
-  "userName": "wxid_xxx",
-  "chatroomUserName": "xxx@chatroom"
- } 
- 注意账号是否有权限
+  "type": 10125
+ }
+
 ```
 
 #### 返回示例 
@@ -50,6 +46,8 @@
 #### 备注 
 
 - 更多返回错误代码请看[错误代码.md](../错误代码.md)
+
+
 
 
 
