--- a/doc/直播间/进入直播间.md
+++ b/doc/直播间/进入直播间.md
@@ -28,6 +28,9 @@
   "objectId": "1xxxxx",
   "objectNonceId": "xx_xx_xx"
  } 
+ 
+ 如何获得liveId？找一个直播间转发给bot，bot通过[处理消息目录]下的回调方式回调消息，通过解析消息获取liveId
+ 
 ```
 
 #### 返回示例 
