--- a/doc/视频号/获取作品详情.md
+++ b/doc/视频号/获取作品详情.md
@@ -11,14 +11,16 @@
 
 #### 参数
 
-| 参数名           | 必选 | 类型     | 说明                   |   
-|:--------------|:---|:-------|----------------------|   
-| type          | 是  | int    | 接口编号                 |   
-| userName      | 是  | string | 视频号id                |   
-| objectId      | 是  | string | 作品id                 |   
-| objectNonceId | 是  | string | 作品nonceId            |   
-| lastBuffer    | 否  | string | 指定返回结果的起始点           |   
-| sessionBuffer | 否  | string | sessionBuffer        |   
+| 参数名           | 必选 | 类型     | 说明                        |   
+|:--------------|:---|:-------|---------------------------|   
+| type          | 是  | int    | 接口编号                      |   
+| userName      | 是  | string | 视频号id                     |   
+| objectId      | 是  | string | 作品id                      |   
+| objectNonceId | 是  | string | 作品nonceId                 |   
+| lastBuffer    | 否  | string | 指定返回结果的起始点                |   
+| sessionBuffer | 否  | string | sessionBuffer             |   
+| exportId      | 否  | string | 加密作品id，`搜一搜-最新`第一页之后的内容获取 |   
+| h5AuthKey     | 否  | string | h5key，不提供会自动调用相关接口获取      |   
 
 #### 请求示例
 
@@ -27,7 +29,14 @@
   "type": 10067,
   "objectId": "1xxxxx",
   "objectNonceId": "xx_xx_xx",
-  "userName": "v2_xxx@finder"
+  "userName": "v2_xxx@finder",
+  "h5AuthKey": "xxxxxx"
+ } 
+  
+ {
+  "type": 10067,
+  "exportId": "export/xxxxx",
+  "h5AuthKey": "xxxxxx"
  } 
 ```
 
