--- a/doc/公众号/获取评论信息.md
+++ b/doc/公众号/获取评论信息.md
@@ -1,6 +1,6 @@
 #### 简要描述
 
-- 添加群成员到通讯录/添加群成员为好友。
+- 获取文章的评论信息。
 
 #### 请求URL
 
@@ -12,23 +12,7 @@
 
 #### 参数
 
-| 参数名              | 必选 | 类型     | 说明     |   
-|:-----------------|:---|:-------|--------|   
-| type             | 是  | int    | 接口编号   |   
-| chatroomUserName | 是  | string | 群聊wxid |   
-| userName         | 是  | string | 用户wxid |   
-| message          | 否  | string | 消息     |   
-
-#### 请求示例
-
-```
- {
-  "type": 10090,
-  "userName": "wxid_xxx",
-  "chatroomUserName": "xxx@chatroom",
-  "message": "hello"
- }
-```
+- 该API文档请联系商务获取
 
 #### 返回示例
 
