--- a/doc/收藏夹/新建笔记.md
+++ b/doc/收藏夹/新建笔记.md
@@ -1,34 +1,34 @@
-
 #### 简要描述
 
-- 添加群管理员。
+- 新建笔记，目前只支持纯文本。
 
 #### 请求URL
+
 - ` http://127.0.0.1:8888/api/`
-  
+
 #### 请求方式
-- POST 
+
+- POST
 
 #### 参数
 
-| 参数名              | 必选 | 类型     | 说明     |   
-|:-----------------|:---|:-------|--------|   
-| type             | 是  | int    | 接口编号   |   
-| userName         | 是  | string | 用户wxid |   
-| chatroomUserName | 是  | string | 群聊wxid |   
+| 参数名     | 必选 | 类型     | 说明   |   
+|:--------|:---|:-------|------|   
+| type    | 是  | int    | 接口编号 |   
+| content | 是  | string | 消息内容 |   
 
 #### 请求示例
 
 ```
  {
-  "type": 49,
-  "userName": "wxid_xxx",
-  "chatroomUserName": "xxx@chatroom"
- } 
- 注意账号是否有权限
+  "type": 10122,
+  "content": "123456"
+ }
+
 ```
 
-#### 返回示例 
+
+#### 返回示例
 
 ``` 
   {
@@ -39,7 +39,7 @@
   }
 ```
 
-#### 返回参数说明 
+#### 返回参数说明
 
 | 参数名         | 类型     | 说明   |   
 |:------------|:-------|------|   
@@ -47,10 +47,9 @@
 | description | string | 错误描述 |   
 | data        | json   | 业务数据 |   
 
-#### 备注 
+#### 备注
 
 - 更多返回错误代码请看[错误代码.md](../错误代码.md)
-
 
 
 
