--- a/doc/朋友圈/发布朋友圈.md
+++ b/doc/朋友圈/发布朋友圈.md
@@ -12,14 +12,15 @@
 
 #### 参数
 
-| 参数名             | 必选 | 类型     | 说明                                              |   
-|:----------------|:---|:-------|-------------------------------------------------|   
-| type            | 是  | int    | 接口编号                                            |   
-| objectDesc      | 是  | string | 朋友圈描述信息，xml形式                                   |   
-| bPrivate        | 否  | bool   | 是否私密朋友圈                                         |   
-| remindUserList	 | 否  | list   | 	wxid列表，提醒谁看；bPrivate为true时该字段无效                |       
-| shieldUserList	 | 否  | list	  | wxid列表，不给谁看；bPrivate为true或已设置showUserList时该字段无效 |   
-| showUserList	   | 否  | 	list	 | wxid列表，谁可以看；bPrivate为true时该字段无效                 |   
+| 参数名              | 必选 | 类型       | 说明                                              |   
+|:-----------------|:---|:---------|-------------------------------------------------|   
+| type             | 是  | int      | 接口编号                                            |   
+| objectDesc       | 是  | string   | 朋友圈描述信息，xml形式                                   |   
+| bPrivate         | 否  | bool     | 是否私密朋友圈                                         |   
+| remindUserList	  | 否  | list     | 	wxid列表，提醒谁看；bPrivate为true时该字段无效                |       
+| shieldUserList	  | 否  | list	    | wxid列表，不给谁看；bPrivate为true或已设置showUserList时该字段无效 |   
+| showUserList	    | 否  | 	list	   | wxid列表，谁可以看；bPrivate为true时该字段无效                 |   
+| protocolVersion	 | 否  | 	string	 | 使用的协议版本，如：3.9.10.19, 3.9.5.81                   |   
 
 #### 请求示例
 
